# snake

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
cmake/: snake-debug-config.cmake
docs/: collision_detection.rst  conf.py  food_generation.rst  index.rst  storage.rst
docs/static/styles/: fig.css
src/: main.c
src/core/: body.c  body.h  core.h  debug.h  list.c  list.h  snake.c  snake.h
src/ctrl/: ctrl.h  kbd.c  kbd.h
src/dbg/: debug.c  debug.h
src/display/: display.h  icon.h  tui.c  tui.h
test/: CMakeLists.txt  test_core.cpp
